K8s/db/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: db
  labels:
    name: db
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
